# trcks-example-cyclopts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/run-pre-commit/: action.yml
.github/actions/run-tests-and-type-checks/: action.yml
.github/actions/set-up-uv/: action.yml
.github/workflows/: continuous-integration.yml
src/trcks_example_cyclopts/: __init__.py  __main__.py  _service.py  service.py  user_interface.py
tests/: test_trcks_example_cyclopts.py
tests/trcks_example_cyclopts/: test_user_interface.py
