[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core~=3.11"] # flit_core 3.11 supports project.license-files.

[dependency-groups]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pyright[nodejs]==1.1.408",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "trcks[mypy,pyright]", # check project.dependencies for version
]

[project]
dependencies = [
    "cyclopts==4.10.1",
    "trcks==0.4.3",
]
description = "Example CLI application that uses the trcks library for type-safe railway-oriented programming in Python 🚂🐍"
license = "MIT"
license-files = ["LICEN[CS]E*"]
name = "trcks-example-cyclopts"
requires-python = "~=3.14.0"
version = "1.2.3"

[project.scripts]
rtw = "trcks_example_cyclopts.user_interface:app"

[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_redefinition = true
disallow_untyped_globals = true
files = "."
strict = true
strict_bytes = true  # will become the default in mypy 2.0
warn_incomplete_stub = true
warn_unreachable = true

[tool.pyright]
deprecateTypingAliases = true
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=trcks_example_cyclopts --cov-fail-under=100 --cov-report=term-missing --import-mode=importlib"

[tool.ruff.lint]
ignore = [
    "COM812",   # "may cause conflicts when used with the formatter"
    "D1",       # would complain about missing docstrings
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["cyclopts.App.default"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
add-bounds = "exact"
required-version = ">=0.10, <0.12"
