[build-system]
build-backend = "uv_build"
requires = ["uv_build~=0.11.0"] # should match tool.uv.required-version

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.6.0",
    "pyrefly==1.1.1",
    "pytest==9.1.0",
    "pytest-cov==7.1.0",
    "trcks[mypy]", # check project.dependencies for version
]

[project]
dependencies = [
    "cyclopts==4.18.0",
    "trcks==0.5.0",
]
description = "Example CLI application that uses the trcks library for type-safe railway-oriented programming in Python 🚂🐍"
license = "MIT"
license-files = ["LICEN[CS]E*"]
name = "trcks-example-cyclopts"
requires-python = "~=3.14.0"
version = "1.2.3"

[project.scripts]
rtw = "trcks_example_cyclopts.user_interface:app"

[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_redefinition = true
disallow_untyped_globals = true
files = "."
strict = true
warn_incomplete_stub = true
warn_unreachable = true

[tool.pyrefly]
enabled-ignores = ["pyrefly"]

[tool.pytest.ini_options]
addopts = "--cov=trcks_example_cyclopts --cov-fail-under=100 --cov-report=term-missing --import-mode=importlib"
filterwarnings = ["error"]

[tool.ruff.lint]
ignore = [
    "COM812", # "may cause conflicts when used with the formatter"
    "D1", # would complain about missing docstrings
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["cyclopts.App.default"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
add-bounds = "exact"
required-version = "~=0.11.0"
