[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10, <0.12"] # should match tool.uv.required-version

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pyright[nodejs]==1.1.408",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "trcks[pyright]", # check project.dependencies for version
]

[project]
dependencies = [
    "cyclopts==4.10.2",
    "trcks==0.4.3",
]
description = "Example CLI application that uses the trcks library for type-safe railway-oriented programming in Python 🚂🐍"
license = "MIT"
license-files = ["LICEN[CS]E*"]
name = "trcks-example-cyclopts"
requires-python = "~=3.14.0"
version = "1.2.3"

[project.scripts]
rtw = "trcks_example_cyclopts.user_interface:app"

[tool.pyright]
deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=trcks_example_cyclopts --cov-fail-under=100 --cov-report=term-missing --import-mode=importlib"

[tool.ruff.lint]
ignore = [
    "COM812", # "may cause conflicts when used with the formatter"
    "D1", # would complain about missing docstrings
]
select = ["ALL"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["cyclopts.App.default"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
add-bounds = "exact"
exclude-newer = "P7D"
required-version = ">=0.10, <0.12"
